<resources>

    <string name="app_name">JuriMobile</string>

    <!-- strings.xml -->
    <string-array name="drawer_options">
        <item>Front End</item>
        <item>Games</item>
        <item>Java</item>
        <item>Mobile</item>
        <item>Web Development</item>
    </string-array>

    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>
    <string name="meusProcessos">Meus Processos</string>
    <string name="processo">Processo</string>
    <string name="ultimas_movimentacoes">Últimas Movimentações</string>
    <string name="movimento">Movimentações</string>
    <string name="drawerMenuTitle">Grupos</string>
    <string name="pesquisa_processo">Pesquisa</string>
    <string name="pesquisar_processo_por">Pesquisa por</string>
    <string name="nome">Nome</string>
    <string name="nProcesso">Nº Processo</string>
    <string name="nomeAutorReu">Nome do autor ou réu</string>
    <string name="numeroProcesso">Número do processo</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="configuracoes">Configurações</string>
    <string name="resultado">Resultado</string>
    <string name="descriptionFavoritar">Marcar procesos como favorito</string>
    <string name="exibir">Exibir</string>
    <string name="remover">Remover</string>
    <string name="removerAcompanhamento">Remover Acompanhamento</string>
    <string name="textoAjuda">Ajuda</string>
    <string name="orgaoJulgador">Orgão Julgador</string>
    <string name="assunto">Assunto</string>
    <string name="situacao">Situação</string>
    <string name="comarca">Comarca</string>
    
    
	
    
</resources>