<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_list_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/background_list_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nProcesso"
            android:theme="@style/textLabel" />

        <TextView
            android:id="@+id/numeroProcesso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:theme="@style/textValue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/orgaoJulgador"
            android:theme="@style/textLabel" />

        <TextView
            android:id="@+id/orgaoJulgador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:theme="@style/textValue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/assunto"
            android:theme="@style/textLabel" />

        <TextView
            android:id="@+id/assunto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:theme="@style/textValue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/situacao"
            android:theme="@style/textLabel" />

        <TextView
            android:id="@+id/situacaoProcesso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:theme="@style/textValue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/comarca"
            android:theme="@style/textLabel" />

        <TextView
            android:id="@+id/comarca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:theme="@style/textValue" />

        <include layout="@layout/divider" />

        <ListView
            android:id="@+id/lista_participantes"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include layout="@layout/divider" />
    </LinearLayout>

</LinearLayout>